fix: clear-value icon wrong width

--- a/packages/classic/scss/input/_variables.scss
+++ b/packages/classic/scss/input/_variables.scss
@@ -33,8 +33,11 @@ $input-inner-calc-height: calc( #{$input-line-height * 1em} + #{$input-padding-y
 $input-inner-calc-height-sm: calc( #{$input-line-height-sm * 1em} + #{$input-padding-y-sm * 2} ) !default;
 $input-inner-calc-height-lg: calc( #{$input-line-height-lg * 1em} + #{$input-padding-y-lg * 2} ) !default;
 
+$input-icon-width: calc( #{$icon-size} + #{$input-padding-y * 2} ) !default;
 $input-icon-height: calc( #{$input-line-height * $input-font-size} + #{$input-padding-y * 2} ) !default;
-$input-icon-width: $input-icon-height !default;
+
+$input-adornment-height: calc( #{$input-line-height * $input-font-size} + #{$input-padding-y * 2} ) !default;
+$input-adornment-width: $input-adornment-height !default;
 
 $input-bg: $component-bg !default;
 $input-text: $component-text !default;
